<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart_account</string>
    <string name="action_settings">Settings</string>
    <string name="Journal">Journal</string>
    <string name="Share">Share</string>
    <string name="Member">Member</string>
    <string name="Add">Add</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Save">Save</string>
    <string name="Day">Day</string>
    <string name="Home">Home</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="Text">Text</string>
    <string name="Number">Number</string>
    <string name="Category">Category</string>
    <string name="Currency">"Currency"</string>
    <string name="Time">Time</string>
    <string name="Proportion">Proportion</string>
    <string name="title_activity_add_member">Add_member</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_journal_page">Journal_page</string>
    <string name="title_activity_member">Member</string>
    <string name="title_activity_send_message_page">Send_message_page</string>
    <string name="title_activity_share_page">Share_page</string>

</resources>
