<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666666"
            android:text="@string/Home" 
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666666"
            android:text="@string/Journal"
            android:textColor="#ffffff" 
            android:onClick="Transfer_to_journal"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666666"
            android:text="@string/Share"
            android:textColor="#ffffff" 
            android:onClick="Transfer_to_share"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666666"
            android:text="@string/Member"
            android:textColor="#ffffff" 
            android:onClick="Transfer_to_member"/>
    </LinearLayout>

    <ListView
        android:id="@+id/account_list"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:background="#ffffff" >

    </ListView>

    <Button
        android:id="@+id/button_Add_Account"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#ff6600"
        android:text="@string/Add" 
        android:onClick="Transfer_to_share"/>

</RelativeLayout>