<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >
        
        <Button
            android:id="@+id/button_Journal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666666"
            android:text="@string/Home" 
            android:textColor="#ffffff" 
            android:onClick="Transfer_to_main"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666666"
            android:text="@string/Journal"
            android:textColor="#ffffff" 
            android:onClick="Transfer_to_journal"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666666"
            android:text="@string/Share"
            android:textColor="#ffffff" 
            android:onClick="Transfer_to_share"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#666666"
            android:text="@string/Member"
            android:textColor="#ffffff" 
            android:onClick="Transfer_to_member"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:text="Member Name"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Button_send_text"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/button_send_email"
        android:layout_alignBottom="@+id/button_send_email"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_marginLeft="19dp"
        android:background="#ff6600"
        android:text="@string/Text" />

    <Button
        android:id="@+id/button_send_email"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/linearLayout1"
        android:layout_marginBottom="33dp"
        android:layout_toRightOf="@+id/textView_member_name"
        android:background="#ff6600"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/editText_account_detail"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/textView_member_name"
        android:layout_below="@+id/textView_member_name"
        android:layout_marginTop="19dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>